loopfor.LoopCourse.scala.error
Erreur de compilation :
LoopCourse:5: error: Invalid literal number
  for (cote<-0to 3){
             ^LoopCourse:5: error: illegal start of simple expression
  for (cote<-0to 3){
             ^LoopCourse:12: error: ')' expected but '}' found.
} 
^